[tool.poetry]
name = "StandardMeasurement"
version = "0.1.0"
description = ""
authors = ["VenkataSantosh <new.santosh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
streamlit = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
